# quant-equity-research

./: .gitignore  01_signal_construction.ipynb  01_signal_construction_.ipynb  02_backtest.ipynb  02_backtest_final.ipynb  03_gov_contracts_signal.ipynb  04_lobbying_signal.ipynb  05_offexchange_signal.ipynb  05_offexchange_signal_.ipynb  06_composite_backtest.ipynb  06_composite_backtest_final.ipynb  07_optimizations_updated.ipynb  08_dashboard.ipynb  GLOSSARY.md  README.md  pyproject.toml  requirements.txt
dashboard/: app.py  panels.py  requirements.txt
data/reference/: committee-membership-current.json  legislators-current.json
notebooks/: 01_foundations.ipynb
reference_data/: networth.csv
src/quant_research/: __init__.py
src/quant_research/backtest/: __init__.py  engine.py  prices.py
src/quant_research/classify/: __init__.py
src/quant_research/enrichment/: __init__.py  live.py  mock.py
src/quant_research/ingestion/: __init__.py  client.py  mock_data.py  store.py
src/quant_research/signals/: __init__.py  base.py  composite.py  congress.py  govcontracts.py  lobbying.py  member_skill.py  offexchange.py
tests/: test_backtest.py  test_ingestion.py
