[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-equity-research"
version = "0.1.0"
description = "Equity research signals from alternative data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "quiverquant",
    "pandas",
    "numpy",
    "sqlalchemy",
    "yfinance",
    "plotly",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
